# vibeplay

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: conftest.py  test_embedder.py  test_io_utils.py  test_llm_vibes.py  test_search.py
tests/fixtures/: library_small.csv
vibeplay/: __init__.py  cli.py  config.py  embedder.py  io_utils.py  llm_vibes.py  logging_utils.py  search.py
